--- a/estilos.css
+++ b/estilos.css
@@ -1,25 +1,11 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : 25-oct-2018, 16:30:53
-    Author     : Joan
-*/
+
 .color_fondo{
-	background-color: lightblue;
+	background-color: lightyellow;
 }
 
 .clase1{
 	color:red;
 }
-
-.separacion_passwd{
-	padding-top: 2%;
-	padding-bottom: 12%;
-}
-
 .login_centro{
 	padding-top: 60%; 
 }
@@ -29,3 +15,57 @@ and open the template in the editor.
 	width: 100%;
 	background-color: black;
 }
+
+.titulo{
+    margin-bottom: 5%;
+    text-align: center;
+}
+
+    
+.blq-cntr{
+    background-color: antiquewhite;
+    width: 50%;
+    margin-left: 25%;
+    padding: 0% 5% 2% 5%;
+    min-width: 400px;
+}
+
+.blq-cntr-titulo{
+    width: 100%;
+    height: 70px;
+    font-size: 18px;
+    padding-top: 5%;
+    text-align: center;
+}
+
+.recursosElec{
+    float: right;
+}
+
+.cabecera{
+    height: 110px;
+    background-color: blueviolet;
+}
+
+.label-usuario{
+    width: 37%;
+    float: left;
+    min-width: 60px;
+    margin-top: 2%;
+}
+
+/* label al lado del label con el usuario */
+.label-usuario-1{
+    padding: 4%;
+    min-width: 100px;
+    float: left;
+}
+
+#btn-cerrarSesion{
+    float: right;
+}
+
+.tablaUsuario{
+    background-color: aquamarine;
+}
+
