--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,6 @@
 
 .color_fondo{
-	background-color: lightblue;
+	background-color: white;
 }
 
 .clase1{
@@ -28,6 +28,7 @@
     margin-left: 25%;
     padding: 0% 5% 2% 5%;
     min-width: 400px;
+    margin-bottom: 5%;
 }
 
 .blq-cntr-titulo{
@@ -65,6 +66,59 @@
     float: right;
 }
 
+
 .tablaUsuario{
-    background-color: aquamarine;
+    border-style: solid;
+    border-color: aliceblue;
+    padding: 1%;
+}
+
+#tablaTable{
+    border-style: groove;
+    border-color: lightgoldenrodyellow;
+}
+
+/* css del modal saul */
+.cuerpoModal{
+    padding: 10px;
+    overflow: hidden;
+}
+
+#divBtnReservar{
+    padding: 0%;
+}
+
+#btnReservar{
+    float: right;
+}
+
+
+.cabecera{
+    height: 150px;
+    background-color: black;
+    padding-left: 0px;
+    color:white;
+}
+
+.imagen{
+    height: 150px;
+    padding-right: 70px;
+    padding-left: 0px;
+}
+
+.pie{
+    height:80px;
+    background-color: black;
+    color:white;
+}
+
+.espacio{
+    height:100px;
+}
+
+/*multimedia*/
+
+.resol_imagenes{
+    height: 200px;
+    width: 250px;
 }
